--- a/dingding/pom.xml
+++ b/dingding/pom.xml
@@ -54,6 +54,12 @@
 			<artifactId>aliyun-java-sdk-core</artifactId>
 			<version>3.5.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpmime</artifactId>
+			<version>4.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
